# clang-dllimport-export-error-demo

./: CMakeLists.txt  README.md  appveyor.yml
appveyor/: build.sh
include/: baselib.hpp  mylib.hpp
src/: baselib.cpp  mylib.cpp
